Make a full biography website

--- a/BiographyMvcApp_ITStep/Views/Shared/_Layout.cshtml
+++ b/BiographyMvcApp_ITStep/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Paintings">Paintings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Biography">Biography</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Discoveries">Discoveries</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Creations">Creations</a>
                         </li>
                     </ul>
                 </div>
