--- a/BiographyMvcApp_ITStep/Views/Home/Index.cshtml
+++ b/BiographyMvcApp_ITStep/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     </div>
     
     <div class="d-flex justify-content-between mt-5">
-        <div><a asp-area="" asp-controller="Home" asp-action="Paintings" class="link-secondary">Here you can see his paintings!</a></div>
-        <div><a asp-area="" asp-controller="Home" asp-action="Discoveries" class="link-secondary">Here you can see his scientific discoveries!</a></div>
+        <div><a asp-area="" asp-controller="Home" asp-action="Biography" class="link-secondary">Here you can see his biography!</a></div>
+        <div><a asp-area="" asp-controller="Home" asp-action="Creations" class="link-secondary">Here you can see his scientific creations!</a></div>
     </div>
 </div>
